--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
-  "repository": "https://github.com/AmenAnthem/emuhub2",
+  "repository": "https://github.com/AmenAnthem/emuhub",
   "keywords": [
     "Electron",
     "launcher"
@@ -17,9 +17,6 @@
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.39",
-    "@electron-forge/maker-deb": "^6.0.0-beta.39",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.39",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.39",
     "@electron-forge/maker-zip": "^6.0.0-beta.39",
     "electron": "^5.0.2"
   },
@@ -31,7 +28,7 @@
       "packagerConfig": {},
       "makers": [
         {
-          "name": "name: '@electron-forge/maker-zip'"
+          "name": "@electron-forge/maker-zip"
         }
       ]
     }
