--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "electron": "^5.0.2"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "load-json-file": "^1.1.0"
   },
   "config": {
     "forge": {
